# minart

./: Cargo.toml
src/: main.rs
